--- a/composer.json
+++ b/composer.json
@@ -11,17 +11,18 @@
         "php": "^7.3|^8.0",
         "devmarketer/easynav": "^1.0",
         "doctrine/dbal": "^3.0",
+        "fakerphp/faker": "^1.23",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
         "laravel/legacy-factories": "^1.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^3.0"
+        "laravel/ui": "^3.0",
+        "matt-daneshvar/laravel-survey": "^0.4.0"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
-        "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.0"
@@ -41,7 +42,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/SurveyHelper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
