--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "consoletvs/charts": "^6.7",
         "devmarketer/easynav": "^1.0",
         "doctrine/dbal": "^3.0",
         "fakerphp/faker": "^1.23",
